# aqipy

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
aqipy/: __init__.py
