[project]
name = "aqms-iran"
version = "0.0.1"
authors = [
    { name = "Ali Safamanesh", email = "daradege@proton.me" },
]
description = "A python client for aqms.doe.ir (Iran's AQI measuring system)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = ["requests"]
[project.urls]
github = "https://github.com/nulltux/aqipy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aqipy"]